# eeric

./: Cargo.toml  LICENSE  README.md
apps/webapp/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
apps/webapp/.github/workflows/: rust.yml
apps/webapp/src/: main.rs  widgets.rs
apps/webapp/src/bridge/: index.ts  monaco.ts  monarch.ts
apps/webapp/src/bridge/styles/: input.css
apps/webapp/src/widgets/: program_view.rs  registers_view.rs  top_bar.rs
apps/webapp/src/widgets/program_view/: editor.rs  example.rs  examples_repo.rs  top_bar.rs
apps/webapp/src/widgets/program_view/examples/: daxpy_scalar.S  daxpy_vector.S  memcpy.S  memcpy_scalar.S  memcpy_vector.S  saxpy.S  strcpy.S  strcpy_scalar.S  strcpy_vector.S  strlen.S  strlen_scalar.S  strlen_vector.S  strncpy.S  strncpy_scalar.S  strncpy_vector.S
apps/webapp/src/widgets/registers_view/: csr_view.rs  memory_view.rs  registers_header.rs  scalar_view.rs  vector_view.rs
apps/webapp/src/widgets/registers_view/scalar_view/: float_registers.rs  integer_registers.rs  pc_register.rs  scalar_register.rs
apps/webapp/src/widgets/registers_view/vector_view/: vector_config.rs  vector_registers.rs
libs/core/: Cargo.toml  README.md
libs/core/examples/: arr_sum.S
libs/core/examples/memcpy/: main.rs
libs/core/src/: lib.rs  macros.rs  prelude.rs  rv_core.rs
libs/core/src/extensions/: iter_collectors_ext.rs  iter_mask_ext.rs
libs/core/src/extensions/iter_collectors_ext/: collect_fp_with_eew_ext.rs
libs/core/src/rv_core/: arbitrary_float.rs  instruction.rs  memory.rs  registers.rs  snapshot.rs  vector_engine.rs
libs/core/src/rv_core/instruction/: executor.rs  format.rs
libs/core/src/rv_core/instruction/executor/: prelude.rs  vector_context.rs
libs/core/src/rv_core/instruction/executor/base/: andi.rs  beq.rs  bne.rs  ld.rs  lhu.rs  lui.rs  lw.rs  lwu.rs  ori.rs  sb.rs  sd.rs  sh.rs  slli.rs  (+10 more)
libs/core/src/rv_core/instruction/format/: base.rs  csr.rs  float.rs  vector.rs
libs/core/src/rv_core/registers/: csr.rs  float.rs  integer.rs  vector.rs
libs/core/src/rv_core/registers/vector/: map_macros.rs  vreg.rs  wide_vreg.rs
libs/core/src/rv_core/vector_engine/: lmul.rs  mask_behaviour.rs  sew.rs  vlen.rs
(+346 files in other folders)
