[workspace]
members = [
    "libs/core",
    "libs/interpreter",
    "apps/webapp"
]
resolver = "2"
default-members = ["apps/webapp"]

[workspace.package]
repository = "https://github.com/pawelperek/eeric"
license = "MIT"
version = "0.1.3"
edition = "2021"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1