[package]
name = "eeric-webapp"
description = "A reference implementation of eeric-core and eeric-interpreter crates"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
eeric-core = { path = "../../libs/core" }
eeric-interpreter = { path = "../../libs/interpreter" }
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
