[package]
name = "eeric-core"
description = "An easily embeddable RV64I core with MFDV extensions"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
derive_builder = "0.20.2"
itertools = "0.14.0"
num-traits = "0.2.19"
